[gd_scene load_steps=26 format=3 uid="uid://nw8qgs6rkle"]

[ext_resource type="Script" path="res://game/LevelManager.gd" id="1_4d807"]
[ext_resource type="PackedScene" uid="uid://0jktuolqn3qn" path="res://scenes/home.tscn" id="2_wpagl"]
[ext_resource type="Script" path="res://game/SequenceManager.gd" id="3_htvxt"]
[ext_resource type="Script" path="res://ui/Textbox.gd" id="3_mkgh6"]
[ext_resource type="FontFile" uid="uid://fq2pv7o6q6kd" path="res://ui/TimesNewPixel.ttf" id="4_77ac3"]
[ext_resource type="Script" path="res://game/Sequence.gd" id="4_ffsn1"]
[ext_resource type="FontFile" uid="uid://cjjk7gwqjreyh" path="res://ui/HelvetiPixel.ttf" id="5_18yfw"]
[ext_resource type="Script" path="res://ui/DialogueTree.gd" id="5_owufg"]
[ext_resource type="SpriteFrames" uid="uid://3b7od2atskhd" path="res://art/dialogue/seer1.tres" id="6_f78pm"]
[ext_resource type="Script" path="res://ui/Dialogue.gd" id="6_xs7cf"]
[ext_resource type="Script" path="res://ui/Effects.gd" id="18_udtf8"]
[ext_resource type="Script" path="res://ui/SaveMenu.gd" id="19_h4x73"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dmlth"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_tki2i"]
length = 0.001

[sub_resource type="Animation" id="Animation_tx0tv"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7c51y"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dshb3"]
_data = {
"RESET": SubResource("Animation_tki2i"),
"fade_in": SubResource("Animation_tx0tv"),
"fade_out": SubResource("Animation_7c51y")
}

[sub_resource type="GDScript" id="GDScript_5ixi2"]
script/source = "extends Node



func _ready():
	pass # Replace with function body.


"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pjmst"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7bebr"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_okey6"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="Animation" id="Animation_3rxpj"]
length = 0.001

[sub_resource type="Animation" id="Animation_b1kn1"]
resource_name = "dialogue1"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialogue")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play"
}]
}
tracks/1/type = "animation"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../Effects/EffectPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": PackedStringArray("black"),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_mwh8v"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "animation"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../Effects/EffectPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": PackedStringArray("fade_out"),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p453c"]
_data = {
"RESET": SubResource("Animation_3rxpj"),
"dialogue1": SubResource("Animation_b1kn1"),
"fade": SubResource("Animation_mwh8v")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Effects" type="CanvasLayer" parent="."]
script = ExtResource("18_udtf8")

[node name="Panel" type="Panel" parent="Effects"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dmlth")

[node name="EffectPlayer" type="AnimationPlayer" parent="Effects"]
libraries = {
"": SubResource("AnimationLibrary_dshb3")
}

[node name="SaveMenu" type="CanvasLayer" parent="."]
script = ExtResource("19_h4x73")

[node name="Overwrite" type="Node" parent="SaveMenu"]
script = ExtResource("5_owufg")

[node name="question" type="Node" parent="SaveMenu/Overwrite"]
script = ExtResource("6_xs7cf")

[node name="prompt" type="Node" parent="SaveMenu/Overwrite/question"]
script = SubResource("GDScript_5ixi2")

[node name="MenuPanel" type="Panel" parent="SaveMenu"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -294.0
offset_right = 148.0
offset_bottom = 294.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pjmst")

[node name="MenuPanel2" type="Panel" parent="SaveMenu/MenuPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -294.0
offset_right = 148.0
offset_bottom = -222.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pjmst")

[node name="Title" type="Label" parent="SaveMenu/MenuPanel/MenuPanel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -39.0
offset_right = 148.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_18yfw")
theme_override_font_sizes/font_size = 70
text = "SAVES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SaveMenu/MenuPanel"]
layout_mode = 0
offset_left = 53.0
offset_top = 141.0
offset_right = 290.0
offset_bottom = 596.0
theme_override_constants/separation = 65

[node name="Textbox" type="CanvasLayer" parent="."]
script = ExtResource("3_mkgh6")
tween_speed = 0.065

[node name="TextboxContainer" type="MarginContainer" parent="Textbox"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -456.5
offset_top = -208.0
offset_right = 456.5
offset_bottom = -42.9998
grow_horizontal = 2
grow_vertical = 0

[node name="Panel" type="Panel" parent="Textbox/TextboxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7bebr")

[node name="Text" type="MarginContainer" parent="Textbox/TextboxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 155
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 83
theme_override_constants/margin_bottom = 23

[node name="TextLabel" type="Label" parent="Textbox/TextboxContainer/Text"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("4_77ac3")
theme_override_font_sizes/font_size = 28
text = "I needa  big mac with fries and extra dip."
autowrap_mode = 3
clip_text = true

[node name="NextArrow" type="Control" parent="Textbox/TextboxContainer"]
layout_mode = 2

[node name="Next" type="Label" parent="Textbox/TextboxContainer/NextArrow"]
layout_mode = 2
offset_left = 867.0
offset_top = 117.0
offset_right = 897.0
offset_bottom = 156.0
size_flags_horizontal = 10
size_flags_vertical = 8
theme_override_font_sizes/font_size = 24
text = ">>"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PortraitBox" type="MarginContainer" parent="Textbox/TextboxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 776

[node name="Panel" type="Panel" parent="Textbox/TextboxContainer/PortraitBox"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7bebr")

[node name="ImageLabel" type="Control" parent="Textbox/TextboxContainer/PortraitBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Textbox/TextboxContainer/PortraitBox/ImageLabel"]
layout_mode = 0
offset_left = 8.0
offset_top = 9.0
offset_right = 130.0
offset_bottom = 38.0
theme_override_fonts/font = ExtResource("5_18yfw")
theme_override_font_sizes/font_size = 24
text = "???"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Image" type="AnimatedSprite2D" parent="Textbox/TextboxContainer/PortraitBox/ImageLabel"]
position = Vector2(68.5, 97)
sprite_frames = ExtResource("6_f78pm")

[node name="OptionsContainer" type="MarginContainer" parent="Textbox"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -308.0
offset_right = 400.0
offset_bottom = -228.0
grow_horizontal = 2
grow_vertical = 0

[node name="Panel" type="Panel" parent="Textbox/OptionsContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_okey6")

[node name="Options" type="MarginContainer" parent="Textbox/OptionsContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Textbox/OptionsContainer/Options"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Sequences" type="Node" parent="."]
script = ExtResource("3_htvxt")

[node name="IntroSequence" type="Node" parent="Sequences" groups=["Persist"]]
script = ExtResource("4_ffsn1")
on_advance = {
"text_finished": PackedStringArray("fade")
}
active = true
on_new = "dialogue1"

[node name="Dialogue" type="Node" parent="Sequences/IntroSequence"]
script = ExtResource("5_owufg")

[node name="seer" type="Node" parent="Sequences/IntroSequence/Dialogue"]
script = ExtResource("6_xs7cf")
text = Array[String](["Something's missing.", "Wake up..."])
image = Array[SpriteFrames]([ExtResource("6_f78pm")])
names = Array[String](["???"])

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sequences/IntroSequence"]
libraries = {
"": SubResource("AnimationLibrary_p453c")
}

[node name="LevelManager" type="Node" parent="."]
script = ExtResource("1_4d807")

[node name="home" parent="LevelManager" instance=ExtResource("2_wpagl")]

[connection signal="player_activated" from="SaveMenu" to="LevelManager" method="player_activated"]
[connection signal="save_game" from="SaveMenu" to="LevelManager" method="_on_save_menu_save_game"]
[connection signal="player_activated" from="Textbox" to="LevelManager" method="player_activated"]
[connection signal="text_finished" from="Textbox" to="Sequences" method="_on_textbox_text_finished"]
